--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -8,19 +8,19 @@
 <body>
 <div>
     <ul class="user-info">
-        <li><a href="{{ url_for('public.index') }}">Home</a></li>
+        <li><a href="{{ url_for('public.index') }}">inicio</a></li>
         {% if current_user.is_anonymous %}
-            <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+            <li><a href="{{ url_for('auth.login') }}">conectarse</a></li>
             <li> | </li>
             <li><a href="{{ url_for('auth.show_signup_form') }}">Registrar</a></li>
         {% else %}
             <li>{{ current_user.name }}</li>
             {% if current_user.is_admin %}
                 <li> | </li>
-                <li><a href="{{ url_for('admin.index') }}">Admin</a></li>
+                <li><a href="{{ url_for('admin.index') }}">administrador</a></li>
             {% endif %}
             <li> | </li>
-            <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+            <li><a href="{{ url_for('auth.logout') }}">desconectarse</a></li>
         {% endif %}
     </ul>
 </div>
