--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
 <body>
 <div>
-    <ul class="user-info">
+    <ul class="contenedor">
+        <input type="checkbox" id="menu-bar">
+        <label class="icon-menu" for="menu-bar"></label>
         <li><a href="{{ url_for('public.index') }}">inicio</a></li>
         {% if current_user.is_anonymous %}
             <li><a href="{{ url_for('auth.login') }}">conectarse</a></li>
@@ -24,6 +28,7 @@
         {% endif %}
     </ul>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 {% block content %}{% endblock %}
 </body>
 </html>
