--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -17,7 +17,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('public.index') }}">Home</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('public.index') }}">inicio</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
