--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -23,17 +23,17 @@
             <a class="nav-link" href="#">Link</a>
         </li>
         {% if current_user.is_anonymous %}
-            <a href="{{ url_for('auth.login') }}">conectarse</a></li>
+            <span class="navbar-text"><a href="{{ url_for('auth.login') }}">conectarse</a></span>
             <li> | </li>
-            <li><a href="{{ url_for('auth.show_signup_form') }}">Registrar</a></li>
+            <span class="navbar-text"><a href="{{ url_for('auth.show_signup_form') }}">Registrar</a></span>
         {% else %}
             <li>{{ current_user.name }}</li>
             {% if current_user.is_admin %}
             <li> | </li>
-                <li><a href="{{ url_for('admin.index') }}">administrador</a></li>
+            <span class="navbar-text"><a href="{{ url_for('admin.index') }}">administrador</a></span>
             {% endif %}
             <li> | </li>
-            <li><a href="{{ url_for('auth.logout') }}">desconectarse</a></li>
+            <span class="navbar-text"><a href="{{ url_for('auth.logout') }}">desconectarse</a></span>
        {% endif %}
     </ul>
     <form class="d-flex" role="search">
