--- a/app/auth/templates/auth/login_form.html
+++ b/app/auth/templates/auth/login_form.html
@@ -14,13 +14,13 @@
                 {% endfor %}
             </div>
             <div>
-                {{ form.password.label }}
-                {{ form.password }}<br>
+                {{ form.password.label(class_="form-label") }}
+                {{ form.password(class_="form_control")}}<br>
                 {% for error in form.password.errors %}
                 <span style="color: red;">{{ error }}</span>
                 {% endfor %}
             </div>
-            <div>{{ form.remember_me() }} {{ form.remember_me.label }}</div>
+            <div>{{ form.remember_me() }} {{ form.remember_me.label(class_="form-label") }}</div>
             <div>
                 {{ form.submit() }}
             </div>
