--- a/app/auth/templates/auth/login_form.html
+++ b/app/auth/templates/auth/login_form.html
@@ -7,8 +7,8 @@
         <form action="" method="post" novalidate>
             {{ form.hidden_tag() }}
             <div>
-                {{ form.email.label }}
-                {{ form.email }}<br>
+                {{ form.email.label(class_="form-label") }}
+                {{ form.email(class_="form-control") }}<br>
                 {% for error in form.email.errors %}
                 <span style="color: red;">{{ error }}</span>
                 {% endfor %}
