--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-lg">
+    <div class="row">
        <a class="navbar-brand" href="{{ url_for('public.index') }}">blog</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
