--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -8,37 +8,39 @@
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-lg">
-       <a class="navbar-brand" href="{{ url_for('public.index') }}">blog</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('public.index') }}">inicio</a>
-        </li>
-        {% if current_user.is_anonymous %}
-            <span class="navbar-text"><a href="{{ url_for('auth.login') }}">conectarse</a></span>
-            <span class="navbar-text"> | </span>
-            <span class="navbar-text"><a href="{{ url_for('auth.show_signup_form') }}">Registrar</a></span>
-        {% else %}
-            <span class="navbar-text">{{ current_user.name }}</span>
-            {% if current_user.is_admin %}
-            <span class="navbar-text"> | </span>
-            <span class="navbar-text"><a href="{{ url_for('admin.index') }}">administrador</a></span>
-            {% endif %}
-            <span class="navbar-text"> | </span>
-            <span class="navbar-text"><a href="{{ url_for('auth.logout') }}">desconectarse</a></span>
-       {% endif %}
-    </ul>
-    <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">buscar</button>
-    </form>
-   </div> 
-</nav>
+ <div class="row">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-lg">
+        <a class="navbar-brand" href="{{ url_for('public.index') }}">blog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{{ url_for('public.index') }}">inicio</a>
+            </li>
+            {% if current_user.is_anonymous %}
+                <span class="navbar-text"><a href="{{ url_for('auth.login') }}">conectarse</a></span>
+                <span class="navbar-text"> | </span>
+                <span class="navbar-text"><a href="{{ url_for('auth.show_signup_form') }}">Registrar</a></span>
+            {% else %}
+                <span class="navbar-text">{{ current_user.name }}</span>
+                {% if current_user.is_admin %}
+                <span class="navbar-text"> | </span>
+                <span class="navbar-text"><a href="{{ url_for('admin.index') }}">administrador</a></span>
+                {% endif %}
+                <span class="navbar-text"> | </span>
+                <span class="navbar-text"><a href="{{ url_for('auth.logout') }}">desconectarse</a></span>
+        {% endif %}
+        </ul>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">buscar</button>
+        </form>
+    </div> 
+  </nav>
+ </div>
 {% block content %}{% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
