--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
 <body>
- <div class="col">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-lg">
         <a class="navbar-brand" href="{{ url_for('public.index') }}">blog</a>
@@ -40,8 +39,7 @@
         </form>
     </div> 
   </nav>
- </div>
- <div class="container-lg"> {% block content %}{% endblock %}</div>
+ <div class="row"> {% block content %}{% endblock %}</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
