--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -29,9 +29,7 @@
                         <a class="nav-link" href="{{ url_for('auth.show_signup_form') }}">Registrarse</a>
                     </li>
                     {% else %}
-                        <!-- <li class="nav-item"> -->
                             <span class="navbar-text">{{ current_user.name }} </span>
-                        <!-- </li> -->
                         {% if current_user.is_admin %}
                             <span class="navbar-text"> | </span>
                             <li class="nav-item">
@@ -52,7 +50,7 @@
             </div>
         </nav>
     </div>
- <div class="row"> {% block content %}{% endblock %}</div>
+ <div class="container-fluid"> {% block content %}{% endblock %}</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
