--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
 <body>
-    <div class="row">
+    <div class="container-lg">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="col">
+            <div class="row">
                 <a class="navbar-brand" href="{{ url_for('public.index') }}">CFP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
