--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
 <body>
-    <div class="container-lg">
+    <div class="row">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="row">
                 <a class="navbar-brand" href="{{ url_for('public.index') }}">CFP</a>
