--- a/app/auth/templates/auth/login_form.html
+++ b/app/auth/templates/auth/login_form.html
@@ -3,7 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <div class="col">
+    <div class="row">
         <form action="" method="post" novalidate>
             {{ form.hidden_tag() }}
             <div>
