--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-lg">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="row">
                 <a class="navbar-brand" href="{{ url_for('public.index') }}">CFP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
