--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -11,7 +11,7 @@
     <div class="container-lg">
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="row">
-                <a class="navbar-brand" href="{{ url_for('public.index') }}">CFP</a>
+                <a class="navbar-brand" href="{{ url_for('public.index') }}">BLOG</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
