--- a/app/auth/templates/auth/login_form.html
+++ b/app/auth/templates/auth/login_form.html
@@ -27,4 +27,5 @@
         </form>
     </div>
     <div>¿No tienes cuenta? <a href="{{ url_for('auth.show_signup_form') }}">Regístrate</a></div>
+    <div class="col-lg-4 col-md-2 col-1"></div>
 {% endblock %}
