--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-lg">
-        <nav class="navbar" style="background-color: #2bb3a0;">
+        <nav class="navbar" style="background-color: #b7e8fc;">
             <div class="container-lg">
                 <a class="navbar-brand" href="{{ url_for('public.index') }}">BLOG</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
