--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-lg">
         <nav class="navbar" style="background-color: #b7e8fc;">
             <div class="container-lg">
                 <a class="navbar-brand" href="{{ url_for('public.index') }}">BLOG</a>
