--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -43,7 +43,7 @@
             </div>
         </nav>
     </div>
-    <div class="text-bg-primary p-3">Primary with contrasting color</div>
+    <div class="text-bg-primary p-3"></div>
  <div class="container-lg"> {% block content %}{% endblock %}</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
