--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -35,7 +35,7 @@
                             </li>
                         {% endif %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('auth.logout') }}">Salir</a>
+                            <a class="link-secondary" href="{{ url_for('auth.logout') }}">Salir</a>
                         </li>
                     {% endif %}
                 </ul>
