--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
 <body>
+    <h1 class="display-6">Display 6</h1>
     <div class="row">
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-lg">
