--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -11,7 +11,10 @@
     <div class="row">
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-lg">
-                <a class="navbar-brand" href="{{ url_for('public.index') }}">BLOG</a>
+                <a class="navbar-brand" href="{{ url_for('public.index') }}">
+                    <img src="756aecc282571bd310b816a04282c363.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                   BLOG
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
