--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -12,7 +12,7 @@
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-lg">
                 <a class="navbar-brand" href="{{ url_for('public.index') }}">
-                    <img src="756aecc282571bd310b816a04282c363.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F615233999089355850%2F&psig=AOvVaw3ewg-eN3uNf2n2vUVHLP2C&ust=1699125195227000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLCa9t_EqIIDFQAAAAAdAAAAABAb" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                    BLOG
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
