--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
 <body>
-    <div class="row">
+    <div class="container-lg">
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-lg">
                 <a class="navbar-brand" href="{{ url_for('public.index') }}">
