--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -46,19 +46,16 @@
             </div>
         </nav>
     </div>
-    <div class="card text-center">
-        <div class="card-header">
-          Featured
+    <div class="container-lg">
+        <div class="card-body">
+          <h5 class="card-title">{% block content %}{% endblock %}</h5>
+         
         </div>
-        <div class="card-body">{% block content %}{% endblock %}
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-body-secondary">
-          2 days ago
-        </div>
+        
       </div>
+      
+         
+        
       
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
