--- a/app/public/templates/public/index.html
+++ b/app/public/templates/public/index.html
@@ -1,28 +1,36 @@
 {% extends "base_template.html" %}
+<h5 class="card-title">{% block title %}Tutorial Flask: Miniblog{% endblock %}</h5>
 
-{% block title %}Tutorial Flask: Miniblog{% endblock %}
 
 {% block content %}
-    <ul>
-    {% for post in post_pagination.items %}
-        <li><a href="{{ url_for('public.show_post', slug=post.title_slug) }}">{{ post.title }}<span class="postCreated">({{ post.created|datetime }})</span>
-        </a></li>
+
+    <ul class="nav flex-column"> {% for post in post_pagination.items %}
+        
+        <p><a class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="{{ url_for('public.show_post', slug=post.title_slug) }}">{{ post.title }}</a></p><span class="postCreated">({{ post.created|datetime }})</span>
+   
     {% else %}
         <li>No hay entradas</li>
     {% endfor %}
     </ul>
-
-    <div class=pagination>
+    <nav aria-label="...">
+      <ul class=pagination>
         {%- for page in post_pagination.iter_pages() %}
             {% if page %}
                 {% if page != post_pagination.page %}
-                    <a href="{{ url_for('public.index', page=page) }}">{{ page }}</a>
+                <li class="page-item">
+                    <a class="page-link" href="{{ url_for('public.index', page=page) }}">{{ page }}</a>
+                  </li>
                 {% else %}
-                    <strong>{{ page }}</strong>
+                <li class="page-item active">
+                    <a class="page-link" href="#">{{ page }}</a>
+                  </li>
+                    <strong></strong>
                 {% endif %}
             {% else %}
                 <span class=ellipsis>…</span>
             {% endif %}
         {%- endfor %}
-    </div>
+      </ul>
+    </nav>
+
 {% endblock %}
