--- a/app/auth/templates/auth/signup_form.html
+++ b/app/auth/templates/auth/signup_form.html
@@ -8,23 +8,23 @@
   
         <p style="color: red;"><strong>Error:</strong> {{ error }}
     {% endif %}
-    <form action="" method="post" novalidate>
+    <form class="row g-3 needs-validation" novalidate>
         {{ form.hidden_tag() }}
-        <div>
+        <div class="col-md-4">
             {{ form.name.label }}
             {{ form.name(size=64) }}<br>
             {% for error in form.name.errors %}
             <span style="color: red;">{{ error }}</span>
             {% endfor %}
         </div>
-        <div>
+        <div class="col-12">
             {{ form.email.label }}
             {{ form.email }}<br>
             {% for error in form.email.errors %}
             <span style="color: red;">{{ error }}</span>
             {% endfor %}
         </div>
-        <div>
+        <div class="col-md-6">
             {{ form.password.label }}
             {{ form.password }}<br>
             {% for error in form.password.errors %}
