--- a/app/public/templates/public/post_view.html
+++ b/app/public/templates/public/post_view.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 
-<h5 class="card-title">{% block title %}{{ post.title }}{% endblock %}</h5>
+<h1>{% block title %}{{ post.title }}{% endblock %}</h1>
 
 
 {% block content %}
