--- a/app/public/templates/public/index.html
+++ b/app/public/templates/public/index.html
@@ -1,18 +1,18 @@
 {% extends "base_template.html" %}
-<h5 class="card-title">{% block title %}Tutorial Flask: Miniblog{% endblock %}</h5>
-
 
 {% block content %}
 
-    <ul class="nav flex-column"> {% for post in post_pagination.items %}
+
+<a>{% block title %}Tutorial Flask: Miniblog{% endblock %}</a>
+  <ul class="nav flex-column"> {% for post in post_pagination.items %}
         
         <p><a class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="{{ url_for('public.show_post', slug=post.title_slug) }}">{{ post.title }}</a></p><span class="postCreated">({{ post.created|datetime }})</span>
    
     {% else %}
         <li>No hay entradas</li>
     {% endfor %}
-    </ul>
-    <nav aria-label="...">
+  </ul>
+  <nav aria-label="..."> 
       <ul class=pagination>
         {%- for page in post_pagination.iter_pages() %}
             {% if page %}
@@ -31,6 +31,6 @@
             {% endif %}
         {%- endfor %}
       </ul>
-    </nav>
+  </nav>
 
 {% endblock %}
