--- a/app/public/templates/public/post_view.html
+++ b/app/public/templates/public/post_view.html
@@ -1,17 +1,18 @@
 {% extends "base_template.html" %}
 
-<h1>{% block title %}{{ post.title }}{% endblock %}</h1>
-
+<a>{% block title %}{{ post.title }}{% endblock %}</a>
 
 {% block content %}
-<a class="nav-link disabled" aria-disabled="true">{{ post.title }}</a> 
-        
+
+<div class="container text-center">
+  <h1 class="nav-link disabled" aria-disabled="true">{{ post.title }}</h1> 
+</div>       
  
-    <div>
+    <div class="container text-center">
         <span class="blogDate">{{ post.created|datetime('full') }}</span>
     </div>
     {% if post.image_name %}
-        <div>
+        <div class="container text-center">
             <img src="{{ url_for('media_posts', filename=post.image_name) }}" />
         </div>
     {% endif %}
@@ -22,7 +23,7 @@
 
     {% if current_user.is_authenticated %}
     
-    <div>
+    <div class="container text-center">
         <form action="" method="post" novalidate>
             {{ form.hidden_tag() }}
             <div>
