--- a/app/public/templates/public/post_view.html
+++ b/app/public/templates/public/post_view.html
@@ -5,11 +5,12 @@
 {% block content %}
 
 <div class="container text-center">
-  <h1 class="nav-link disabled" aria-disabled="true">{{ post.title }}</h1> 
+  <span class="blogDate">{{ post.created|datetime('full') }}</span>
+  <h1 class="display-3">{{ post.title }}</h1> 
 </div>       
  
     <div class="container text-center">
-        <span class="blogDate">{{ post.created|datetime('full') }}</span>
+        
     </div>
     {% if post.image_name %}
         <div class="container text-center">
