--- a/app/auth/templates/auth/signup_form.html
+++ b/app/auth/templates/auth/signup_form.html
@@ -3,36 +3,47 @@
 {% block title %}Registro de usuarios{% endblock %}
 
 {% block content %}
-
-    {% if error %}
-  
-        <p style="color: red;"><strong>Error:</strong> {{ error }}
-    {% endif %}
-    <form class="row g-3 needs-validation" novalidate>
+<div class="col-lg-4 col-md-2 col-1"></div>
+<div class="col-lg-4 col-md-8 col-10 mt-3">
+    <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
-        <div class="col-md-4">
-            {{ form.name.label }}
-            {{ form.name(size=64) }}<br>
-            {% for error in form.name.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
+        <div>
+            {{ form.name.label(class_="form-label") }}
+            {{ form.name(size=64, class_="form-control") }}<br>
+            {% if form.name.errors %}
+                <ul class=errors>
+                {% for error in form.name.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
         </div>
-        <div class="col-12">
-            {{ form.email.label }}
-            {{ form.email }}<br>
-            {% for error in form.email.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
+        <div>
+            {{ form.email.label(class_="form-label") }}
+            {{ form.email(type="email", class_="form-control") }}<br>
+            {% if form.email.errors %}
+                <ul class=errors>
+                {% for error in form.name.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
         </div>
-        <div class="col-md-6">
-            {{ form.password.label }}
-            {{ form.password }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
+        <div>
+            {{ form.password.label(class_="form-label") }}
+            {{ form.password(type="password", class_="form-control") }}<br>
+            {% if form.password.errors %}
+                <ul class=errors>
+                {% for error in form.name.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div>
             {{ form.submit() }}
         </div>
     </form>
+</div>
+<div class="col-lg-4 col-md-2 col-1"></div>
 {% endblock %}
