--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -3,56 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for("static", filename="base.css") }}">
 </head>
-<body>
+<body style="background-color:rgb(217, 222, 233)">
     <div class="container-lg">
         <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-            <div class="container-lg">
+            <div class="container">            
                 <a class="navbar-brand" href="{{ url_for('public.index') }}">
-                    <img src="https://i.pinimg.com/736x/75/6a/ec/756aecc282571bd310b816a04282c363.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                   BLOG
+                    <img src="img/logo.svg" width="50rem" alt="logo">
+
+                   CFP
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('public.index') }}">Inicio</a>
-                    </li>
-                    {% if current_user.is_anonymous %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.login') }}">Ingresar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.show_signup_form') }}">Registrarse</a>
-                    </li>
-                    {% else %}
-                            <span class="navbar-text">{{ current_user.name }} </span>
-                        {% if current_user.is_admin %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('admin.index') }}">Administrador</a>
-                            </li>
-                        {% endif %}
+
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('auth.logout') }}">Salir</a>
+                         <a class="nav-link" href="{{ url_for('public.index') }}">Inicio</a>
                         </li>
-                    {% endif %}
-                </ul>
+                     {% if current_user.is_anonymous %}
+                        <li class="nav-item">
+                         <a class="nav-link" href="{{ url_for('auth.login') }}">Ingresar</a>
+                        </li>
+                        <li class="nav-item">
+                         <a class="nav-link" href="{{ url_for('auth.show_signup_form') }}">Registrarse</a>
+                        </li>
+                     {% else %}
+                             <span class="navbar-text">{{ current_user.name }} </span>
+                         {% if current_user.is_admin %}
+                            <li class="nav-item">
+                                 <a class="nav-link" href="{{ url_for('admin.index') }}">Administrador</a>
+                            </li>
+                         {% endif %}
+                         <li class="nav-item">
+                           <a class="nav-link" href="{{ url_for('curso.index') }}">Curso</a>
+                        </li>
+                         {% endif %}
+                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('auth.logout') }}">Salir</a>
+                         </li>
+                    </ul>
                 </div>
-            </div>
         </nav>
     </div>
     <div class="container-lg">
-        <div class="card-body">
-          <h5 class="card-title">{% block content %}{% endblock %}</h5> 
-         
-        </div>
-        
-      </div>
+           {% block content %}{% endblock %}       
+    </div>
         
       
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
